--- a/about-me.html
+++ b/about-me.html
@@ -6,6 +6,12 @@
 	<meta charset="utf-8"/>
 	</head>
 	<body>
+    <ul>
+      <li><a href="about-me.html">About Me</a></li>
+      <li><a href="teams.html">My Favorite Teams</a></li>
+      <li><a href="family.html">My Family</a></li>
+      <li><a href="hobbies.html">My Hobbies</a></li>
+    </ul>
 		<h1>About Me</h1>
 		<p>My name is Kyle Silberbauer.</p>
 		<p>I live in Boston, MA.</p>
