selected nav link

--- a/family.html
+++ b/family.html
@@ -9,7 +9,7 @@
     <ul>
       <li><a href="about-me.html">About Me</a></li>
       <li><a href="teams.html">My Favorite Teams</a></li>
-      <li><a href="family.html">My Family</a></li>
+      <li class="selected">My Family</li>
       <li><a href="hobbies.html">My Hobbies</a></li>
     </ul>
 		<h1>My Family</h1>
