--- a/hobbies.html
+++ b/hobbies.html
@@ -10,7 +10,7 @@
       <li><a href="about-me.html">About Me</a></li>
       <li><a href="teams.html">My Favorite Teams</a></li>
       <li><a href="family.html">My Family</a></li>
-      <li><a href="hobbies.html">My Hobbies</a></li>
+      <li class="selected">My Hobbies</li>
     </ul>
 		<h1>My Hobbies</h1>
     <ul>
