--- a/teams.html
+++ b/teams.html
@@ -8,7 +8,7 @@
 <body>
     <ul>
       <li><a href="about-me.html">About Me</a></li>
-      <li><a href="teams.html">My Favorite Teams</a></li>
+      <li class="selected">My Favorite Teams</li>
       <li><a href="family.html">My Family</a></li>
       <li><a href="hobbies.html">My Hobbies</a></li>
     </ul>
