--- a/about-me.html
+++ b/about-me.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
     <ul>
-      <li><a href="about-me.html">About Me</a></li>
+      <li class="selectd">About Me</li>
       <li><a href="teams.html">My Favorite Teams</a></li>
       <li><a href="family.html">My Family</a></li>
       <li><a href="hobbies.html">My Hobbies</a></li>
