nav-only ul styling

--- a/about-me.html
+++ b/about-me.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8"/>
 	</head>
 	<body>
-    <ul>
+    <ul class="menu">
       <li class="selectd">About Me</li>
       <li><a href="teams.html">My Favorite Teams</a></li>
       <li><a href="family.html">My Family</a></li>
