--- a/family.html
+++ b/family.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8"/>
 	</head>
 	<body>
-    <ul>
+    <ul class="menu">
       <li><a href="about-me.html">About Me</a></li>
       <li><a href="teams.html">My Favorite Teams</a></li>
       <li class="selected">My Family</li>
